--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.1
-
+    - name:install and build
+      run:|
+	npm install
+	npm run build
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@3.5.7
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
         FOLDER: build
-        BUILD_SCRIPT: npm install && npm run build
