--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Yill625.github.io/github-actions-demo",
+  "homepage": "https://yill625.github.io/github-actions-demo",
   "name": "github-actions-demo",
   "version": "0.1.0",
   "private": true,
