--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2.3.1
-    - name: install and build
-      run: |
-        npm install
-        npm run build
+      uses: actions/checkout@master
+
     - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@3.5.7
-      with:
+      uses: JamesIves/github-pages-deploy-action@master
+      env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
         FOLDER: build
+        BUILD_SCRIPT: npm install && npm run build
